[package]
name = "asgard_vault"
version = "1.2.0-dev"
edition = "2021"

[dependencies]
sbor = { path = "../../radixdlt-scrypto/sbor" }
scrypto = { path = "../../radixdlt-scrypto/scrypto" }

[dev-dependencies]
radix-engine = { path = "../../radixdlt-scrypto/radix-engine" }
scrypto-test = { path = "../../radixdlt-scrypto/scrypto-test" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
