[package]
name = "maya_router"
version = "1.0.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "b82a7db0a0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "b82a7db0a0" }

[dev-dependencies]
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "b82a7db0a0" }
scrypto-compiler = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "b82a7db0a0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "b82a7db0a0" }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = { version = "0.26.2" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
