[workspace]
resolver = "2"
members = [
    "package",
    "cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sbor = { version = "1.2.0" }
scrypto = { version = "1.2.0" }
scrypto-test = { version = "1.2.0" }
scrypto-compiler = { version = "1.2.0" }
radix-engine = { version = "1.2.0" }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = { version = "0.26.2" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

